--- a/src/Xrm.Framework.CI.Extensions.Tests/packages.config
+++ b/src/Xrm.Framework.CI.Extensions.Tests/packages.config
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FakeItEasy" version="3.2.0" targetFramework="net462" />
+  <package id="FakeXrmEasy.9" version="1.53.0" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.12" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.12" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.12" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.16" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.1.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="xunit" version="2.4.1" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net462" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net462" />
@@ -10,4 +21,6 @@
   <package id="xunit.core" version="2.4.1" targetFramework="net462" />
   <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net462" />
   <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net462" />
+  <package id="xunit.runner.console" version="2.4.1" targetFramework="net462" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.4.1" targetFramework="net462" developmentDependency="true" />
 </packages>
