Checking in WIP

--- a/src/Xrm.Framework.CI.Extensions/Xrm.Framework.CI.Extensions.csproj
+++ b/src/Xrm.Framework.CI.Extensions/Xrm.Framework.CI.Extensions.csproj
@@ -64,7 +64,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataOperations\DataExportManager.cs" />
     <Compile Include="DataOperations\DataImportManager.cs" />
+    <Compile Include="DataOperations\DataMapper.cs" />
     <Compile Include="DataOperations\JsonAttribute.cs" />
     <Compile Include="DataOperations\JsonConverter.cs" />
     <Compile Include="DataOperations\JsonEntity.cs" />
