--- a/src/Xrm.Framework.CI.Extensions.Tests/Xrm.Framework.CI.Extensions.Tests.csproj
+++ b/src/Xrm.Framework.CI.Extensions.Tests/Xrm.Framework.CI.Extensions.Tests.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="IntegrationTests\ExportTests.cs" />
     <Compile Include="IntegrationTests\DataOperationsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logging\TestLogger.cs" />
