--- a/src/Xrm.Framework.CI.Extensions/Xrm.Framework.CI.Extensions.csproj
+++ b/src/Xrm.Framework.CI.Extensions/Xrm.Framework.CI.Extensions.csproj
@@ -32,16 +32,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.12\lib\net462\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
+      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.24\lib\net462\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xrm.Sdk, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.12\lib\net462\Microsoft.Xrm.Sdk.dll</HintPath>
+      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.24\lib\net462\Microsoft.Xrm.Sdk.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json.Schema, Version=3.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.Schema.3.0.11\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.Schema.3.0.13\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,18 +60,23 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Xrm.Framework.CI.Common">
-      <HintPath>..\packages\XrmCIFramework.9.0.0.39\tools\Xrm.Framework.CI.Common.dll</HintPath>
+      <HintPath>..\packages\XrmCIFramework.9.1.0.1\tools\Xrm.Framework.CI.Common.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataOperations\DataExportManager.cs" />
     <Compile Include="DataOperations\DataImportManager.cs" />
     <Compile Include="DataOperations\DataMapper.cs" />
+    <Compile Include="DataOperations\FetchXmlManager.cs" />
     <Compile Include="DataOperations\JsonAttribute.cs" />
     <Compile Include="DataOperations\JsonConverter.cs" />
+    <Compile Include="SdkMessages\JsonSetStateRequest.cs" />
+    <Compile Include="SdkMessages\JsonDeleteAttributeRequest.cs" />
+    <Compile Include="SdkMessages\JsonSdkMessage.cs" />
     <Compile Include="DataOperations\JsonEntity.cs" />
     <Compile Include="DataOperations\JsonEntityReference.cs" />
     <Compile Include="DataOperations\JsonParser.cs" />
+    <Compile Include="DataOperations\MetadataManager.cs" />
     <Compile Include="Entities\EntityExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolutionManagement\SolutiontManager.cs" />
@@ -84,7 +89,6 @@
     <EmbeddedResource Include="Schema\crmdata.schema.json" />
     <None Include="Schema\CRUD.sample.json" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="TypedEntities\filter.xml" />
   </ItemGroup>
