--- a/src/Xrm.Framework.CI.Extensions.PowerShell.Cmdlets/Xrm.Framework.CI.Extensions.PowerShell.Cmdlets.csproj
+++ b/src/Xrm.Framework.CI.Extensions.PowerShell.Cmdlets/Xrm.Framework.CI.Extensions.PowerShell.Cmdlets.csproj
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.24\lib\net462\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
+      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.34\lib\net462\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xrm.Sdk, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.24\lib\net462\Microsoft.Xrm.Sdk.dll</HintPath>
+      <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.34\lib\net462\Microsoft.Xrm.Sdk.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xrm.Sdk.Deployment, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CrmSdk.Deployment.9.0.2.12\lib\net462\Microsoft.Xrm.Sdk.Deployment.dll</HintPath>
@@ -75,13 +75,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Xrm.Framework.CI.Common, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\XrmCIFramework.9.1.0.1\tools\Xrm.Framework.CI.Common.dll</HintPath>
+    <Reference Include="Xrm.Framework.CI.Common">
+      <HintPath>..\packages\XrmCIFramework.9.1.0.3\tools\Xrm.Framework.CI.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Xrm.Framework.CI.PowerShell.Cmdlets, Version=9.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\XrmCIFramework.9.1.0.1\tools\Xrm.Framework.CI.PowerShell.Cmdlets.dll</HintPath>
+    <Reference Include="Xrm.Framework.CI.PowerShell.Cmdlets">
+      <HintPath>..\..\..\xrm-ci-framework\MSDYNV9\Xrm.Framework.CI\Xrm.Framework.CI.PowerShell.Cmdlets\bin\Debug\Xrm.Framework.CI.PowerShell.Cmdlets.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
